vuetify - fix upgrade issues reservation form button, modal double scroll fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,9 @@
 .position-relative {
   position: relative;
 }
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
 .normalText {
   font-size: rem(16px);
   color: #b9bcc1;
